# ConvertTableOf0And1

./: .gitignore  CMakeLists.txt  SecondAlgorithm.csv  run.cmd  test.csv
Headers/: AbstractVersion.hpp  FirstVersion.hpp  GeneratorTasks.hpp  SecondVersion.hpp  Tests.hpp
Sources/: AbstractVersion.cpp  FirstVersion.cpp  GeneratorTasks.cpp  SecondVersion.cpp  Tests.cpp  main.cpp
